GPC/tests/examples/fail/duplicateFunctions.gpc

int GPRM::Test::f1() {return 0;}
int GPRM::Test::f1() {return 0;}

int GPRM::Test::duplicateFunctions() {
    return 1;
}
